project/stage/tests/reject/bad_var_decl/bad_id_start_w_num.ul
int [1] func(int n) {

    void 1bad;
}
